# mahjong-question-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
mahjong_question_generator/: __init__.py  calculate.py  convert.py  exceptions.py  generate.py  hand.py  question.py  validation.py
notebook/: gen.ipynb  puestion-linucb.ipynb  question.ipynb
