[tool.poetry]
name = "mahjong_question_generator"
version = "0.1.0"
description = ""
authors = ["po3rin <abctail30@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.10"
mahjong = "^1.2.1"
wheel = "^0.41.3"
pybind11 = "^2.11.1"
setuptools = "^69.0.2"
cython = "^3.0.5"
numpy = "^1.26.2"
pandas = "^2.1.3"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.2"
ipykernel = "^6.26.0"
ipywidgets = "^8.1.1"

[build-system]
requires = [
    "poetry-core",
    "setuptools",
    "Cython>=0.29",
    "pybind11"
]
build-backend = "poetry.core.masonry.api"
